--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -129,6 +129,9 @@
 <li><code>$pager-link-decoration</code></li>
 <li><code>$pager-link-decoration-hover</code></li>
 <li><code>$figure-caption-style</code></li>
+<li><code>$figure-border</code></li>
+<li><code>$figure-margin</code></li>
+<li><code>$figure-padding</code></li>
 </ul>
 </li>
 <li>New node modules:<ul>
